src/components/stats/styles.module.scss
.statsReferenceWrapper {
	width: 100%;
	padding: 10px;
}

.statsReference {
	display: flex;
	font-size: .7em;
	gap: 3px;
}


.compareWithBook {
	flex: 1 1 auto;
	min-width: 0px;
	text-overflow: ellipsis;
}

.compareWithChapter {
	flex: 1 1 auto;
	min-width: 60px;
}

.compareWithVerses {
	flex: 1 1 auto;
	min-width: 60px;
}

.statsResults {
	display: flex;
	flex-wrap: wrap;
	width: 100%;

	> div {
		flex-grow: 1;
		margin-bottom: 1rem;
		padding: .5rem;
	}

	td {
		cursor: pointer;
	}
}

.statsDescription {
	font-size: 14px;
	line-height: 30px;
}

table {
	border-collapse: collapse;
	width: 100%;

	th {
		padding-right: 5px;
		text-align: left;
	}
}

.sort {
	cursor: pointer;
}

